# toctactoe-ai-onthefly

./: .gitignore  ANALYSIS.md
Tests/: README.md
Tests/Backend/: TicTacToe.Api.Tests.csproj
Tests/Backend/AspNetCore/: AiPlayerServiceTests.cs  GameControllerTests.cs  GameEngineTests.cs
Tests/Backend/Python/: conftest.py  pyproject.toml  test_ai_player_service.py  test_game_engine.py  test_game_router.py
Tests/E2E/Playwright/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
Tests/E2E/Playwright/specs/: game-flow.spec.ts  helpers.ts  smoke.spec.ts
Tests/Frontend/: Cell.test.tsx  NewGameButton.test.tsx  ScoreBoard.test.tsx  useGame.test.ts  vitest.config.ts
Tests/Frontend/Angular/: board.component.spec.ts  cell.component.spec.ts  game-status.component.spec.ts  game.store.spec.ts  new-game-button.component.spec.ts  package-lock.json  package.json  score-board.component.spec.ts  setup.ts  tsconfig.json  tsconfig.spec.json  vitest.config.ts
Tests/Frontend/React/: Board.test.tsx  GameStatus.test.tsx  package.json  vitest.config.ts
