[project]
name = "tictactoe-api-tests"
version = "0.0.0"
description = "pytest suite for the Python/FastAPI Tic Tac Toe backend"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
# Source tree (sibling to Tests/) is added to sys.path by conftest.py
